# caffe-win-dependency

./: .gitignore  .gitmodules  README.md  build_caffe.cmd  build_caffe2.cmd  build_caffe2_gpu.cmd  build_caffe_gpu.cmd
_install/cmake/: hdf5-config.cmake  hdf5-targets-release.cmake  hdf5-targets.cmake  protobuf-config-version.cmake  protobuf-targets-release.cmake  protobuf-targets.cmake
_install/lib/: boost_chrono-vc141-mt-1_65_1.lib  boost_filesystem-vc141-mt-1_65_1.lib  boost_numpy-vc141-mt-1_65_1.lib  boost_python-vc141-mt-1_65_1.lib  boost_system-vc141-mt-1_65_1.lib  boost_thread-vc141-mt-1_65_1.lib  gflags_nothreads_static.lib  gflags_static.lib  glog.lib  hdf5.lib  hdf5_cpp.lib  hdf5_hl.lib  hdf5_hl_cpp.lib  libboost_chrono-vc141-mt-1_65_1.lib  libboost_filesystem-vc141-mt-1_65_1.lib  libboost_numpy-vc141-mt-1_65_1.lib  libboost_numpy-vc141-mt-s-1_65_1.lib  libboost_system-vc141-mt-1_65_1.lib  libboost_thread-vc141-mt-1_65_1.lib  libhdf5.settings  libhdf5_cpp.lib  libhdf5_hl.lib  libhdf5_hl_cpp.lib  liblmdb.lib  libopenblas.lib  libprotobuf-lite.lib  libprotobuf.lib  libprotoc.lib  libswresample.lib  libswscale.lib  snappy.lib
_vs2015/cmake/: hdf5-config-version.cmake  protobuf-config-version.cmake
_vs2015/include/: f77blas.h
_vs2015/lib/: gflags_nothreads_static.lib  gflags_static.lib  glog.lib  leveldb.lib  libboost_chrono-vc140-mt-s-1_65_1.lib  libboost_chrono-vc141-mt-s-1_65_1.lib  libboost_date_time-vc140-mt-s-1_65_1.lib  libboost_date_time-vc141-mt-s-1_65_1.lib  libboost_filesystem-vc140-mt-s-1_65_1.lib  libboost_filesystem-vc141-mt-s-1_65_1.lib  libboost_numpy-vc140-mt-s-1_65_1.lib  libboost_numpy-vc141-mt-s-1_65_1.lib  libboost_numpy3-vc140-mt-s-1_65_1.lib  libhdf5.settings  (+11 more)
lmdb/: CMakeLists.txt  mdb.c
(+86 files in other folders)
